Added more functionality
I started having a little fun with it so I added the clear function to improve the UX. I also figured it needed a squared and with that I decided it needed a square root function

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <option value="-">-</option>
             <option value="*">*</option>
             <option value="/">/</option>
+            <option value="**">x^y</option>
+            <option value="sqrt">√</option>
         </select>
 
         <p>
@@ -33,7 +35,10 @@
         <button id="calculateButton">Calculate</button>
     </div>
 
-    <h2 >Result: <span id="result">?</span></h2>
+    <h2 >Result: <span id="result"> ?</span></h2>
+    <div class="clear">
+        <button id="clearCalculator">Clear</button>
+    </div>
     
 
     <script src="main.js"></script>
