--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
     </div>
 
     <h2 >Result: <span id="result"> ?</span></h2>
-    <div class="clear">
-        <button id="clearCalculator">Clear</button>
+    <div class="options">
+        <button id="clearCalculator">Clear Calculator</button>
+        <button id="lightMode">Light Mode</button>
     </div>
     
 
